[package]
name = "feature-showcase"
version = "0.1.0"
edition = "2021"
description = "Comprehensive example demonstrating ALL Archimedes features for binding parity reference"
license = "Apache-2.0"

[[bin]]
name = "feature-showcase"
path = "src/main.rs"

[dependencies]
# Archimedes framework - ALL crates
archimedes = { path = "../../crates/archimedes" }
archimedes-core = { path = "../../crates/archimedes-core" }
archimedes-server = { path = "../../crates/archimedes-server" }
archimedes-middleware = { path = "../../crates/archimedes-middleware", features = ["compression"] }
archimedes-router = { path = "../../crates/archimedes-router" }
archimedes-extract = { path = "../../crates/archimedes-extract" }
archimedes-config = { path = "../../crates/archimedes-config" }
archimedes-sentinel = { path = "../../crates/archimedes-sentinel" }
archimedes-authz = { path = "../../crates/archimedes-authz" }
archimedes-telemetry = { path = "../../crates/archimedes-telemetry" }
archimedes-docs = { path = "../../crates/archimedes-docs" }
archimedes-ws = { path = "../../crates/archimedes-ws" }
archimedes-sse = { path = "../../crates/archimedes-sse" }
archimedes-tasks = { path = "../../crates/archimedes-tasks" }
archimedes-test = { path = "../../crates/archimedes-test" }

# HTTP types
http = "1"
http-body-util = "0.1"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Temp files for uploads
tempfile = "3"

[dev-dependencies]
archimedes-test = { path = "../../crates/archimedes-test" }
